# qtwebengine-integration

./: .gitignore  .gitlab-ci.yml  .gitmodules  .prettierrc  LICENSE  Makefile  README.md  docker-compose.yaml  index.html  nal  nginx.dev.conf
.gitlab/issue_templates/: ken-bug-dom.md  ken-bug-video.md
browser/: .gitignore  CMakeLists.txt  browser.qrc  browser.sh  jimberx264browser.pro.bak
browser/injectables/: detectformscript.js  fieldobserver.js  fillusernameandorpassword.js  getusernameandpassword.js
browser/injectables/passwordmanager/: credentials.sql  master_credentials.sql
browser/src/: JCommandHandler.h  jimberx264browser.cpp  jimberx264browser.h  jimberx264webpage.cpp  jimberx264webpage.h  jimberx264webview.cpp  jimberx264webview.h  jnotificationhandler.cpp  jnotificationhandler.h  jpopupwindow.cpp  jpopupwindow.h  jxfiledownload.cpp  jxfiledownload.h  jxlog.h  jxwindowcontroller.cpp  jxwindowcontroller.h  main.cpp  socketcommunication.cpp  socketcommunication.h
browser/src/adblock/: Adblocker.cpp  Adblocker.h  CMakeLists.txt  jrequestinterceptor.cpp  jrequestinterceptor.h
browser/src/passwordmanager/: CMakeLists.txt  credentials.h  jpasswordmanager.cpp  jpasswordmanager.h
browser/src/resourceproxy/: CMakeLists.txt  JCookieJar.cpp  JCookieJar.h  broccoli.h  jrequest.cpp  jrequest.h  jrequesthandler.cpp  jrequesthandler.h  jresourceproxy.cpp  jresourceproxy.h
browser/src/uploadmanager/: CMakeLists.txt  jupload.cpp  jupload.h  juploadmanager.cpp  juploadmanager.h
client/: .gitignore  config_deploy.js  iframeMsgReceiver.html  index.html  index.html.1  index.html.2  main.cpp
client/css/: default_browser_style.css  fontawesome_all.css  fonts.css  style.css  wget-log
client/dom/: dom.html
client/js/: Extensions.js  Main.js  MouseEvent.js  PhysicalBrowser.js  SystemTools.js  firebase.js  firebase_aliases.js  print.min.js  user.js
devserver/: common.conf  getcerts.sh  nginx.conf  serve
docker/: Dockerfile  image.webm  install-qt  start.sh  start_audio.sh  start_devaudio.sh  start_microphone.sh  start_webcam.sh
docker/install-scripts/: install-httpserver.sh  install-protobuf.sh  install-tahoma.sh  install-widevine.sh
documentation/: Deployment.md  Development.md  Proxy.md
documentation/browserdevimage/: Dockerfile  Readme.md
documentation/deployment/: Old_Manual_Jimber.md
documentation/domrendering/: README.md
documentation/passwordmanager/: README.md  main.cpp  pwdecrypt
documentation/profiling/: Orbit.md
documentation/various/: 3rd party url.md  Cross-compiling_QT_for_ARM.md  QT.md  keyboard.md  localstorage.md  microphone.md  parsing_wav_in_c.md  webcam.md
proto/: commands.yaml  generate.py
qpa/: .gitignore  JimberQPA.pro  README.md  jimberx264.json
qpa/src/: JCommandHandler.h  (+33 more)
scripts/: get_webengine_libs.sh  gitlab_ci_compile_browser.sh  run.sh  run_appisolation.sh  setup.sh  setup_webserver.sh
spawner/: .prettierrc  Dockerfile  README.md  nginx.conf  package.json  start.sh  tsconfig.json
spawnerold/: .dockerignore  Dockerfile  app.py  config.py  moduleloader.py  nginx.conf  requirements.txt  start.sh  wsgi.py
(+135 files in other folders)
